scss/_stats.scss
.stats
{
    position: relative;

    width: 100%;
    max-width: 1140px;
    margin: 0 auto;


    background-color: $color-white;

    @media #{$desktop} {
      bottom: 70px;
    }

    h2
    {
        position: absolute;
        top: -70px;

        width: 100%;

        text-align: center;

        @include TYPE-HeaderH2;

        @media #{$tablet}
        {
            top: -118px;
        }

        @media #{$desktop} {
          top: -133px;
        }
    }
    &__cards
    {
        display: flex;

        height: 232px;

        justify-content: space-between;

        @media #{$desktop} {
          height: 800px;
          padding: 40px;
          flex-wrap: wrap;
        }

        svg {
          height: 18px;
          width: 100%;
          position: absolute;
          top: -12px;
          left: 0;

          @media #{$tablet} {
            top: -15px;
          }

          @media #{$desktop} {
            top: -17px;
          }
        }

        button
        {
            float: left;

            width: 20%;
            height: 100%;

            color: $color-primary;
            background: 0;

            @media #{$desktop} {
              display: none;
            }
        }

        &_count
        {
            position: absolute;
            bottom: 20px;
            left: 0;

            width: 100%;

            text-align: center;

            @include TYPE-StatsCount;

            @media #{$desktop} {
              display: none;
            }
        }
    }

    &__card
    {
        display: none;
        flex-direction: column;

        width: 210px;
        height: 150px;
        margin-top: 45px;

        text-align: center;

        flex-wrap: wrap;
        align-items: center;
        justify-content: center;

        &:first-of-type
        {
            display: flex;
        }

        @media #{$tablet}
        {
            &:nth-of-type(-n+3)
            {
                display: flex;

                margin-right: 10px;
                margin-left: 10px;
            }

            &:nth-of-type(1)
            {
                padding-right: 25px;

                border-right: 1px solid $color-lightgrey;
            }

            &:nth-of-type(3)
            {
                padding-left: 25px;

                border-left: 1px solid $color-lightgrey;
            }
        }

        @media #{$desktop} {
          display: flex;
          width: 33.2%;
          height: 33.2%;
          margin: 0;

          &:nth-of-type(-n+3), &:nth-of-type(3), &:nth-of-type(1)
          {
              margin: 0;
              padding: 0;
              border: 0;
          }

          &:nth-of-type(-n+6) {
            border-bottom: 1px solid $color-lightgrey;
          }

          &:nth-of-type(3n-7) {
            border-right: 1px solid $color-lightgrey;
          }

          &:nth-of-type(3n-7) {
            border-left: 1px solid $color-lightgrey;
          }



        }

        &_num
        {
            @include TYPE-StatsNum;
        }

        &_desc
        {
            margin: 5px;
            max-width: 240px;
            max-height: 48px;

            @include TYPE-StatsText;
        }
    }
}

